src/index.css
:root {
  --color-0: #57a6cc;
  --color-1: #5d747f;
  --color-2: #6dcfff;
  --color-3: #bae8ff;
  --color-4: #37687f;
}

::selection {
  background: #37687f; 
  color: #fff;
}
::-moz-selection {
  background: #37687f; 
  color: #fff;
}

body {
  margin-left: 5rem;
  margin-right: 23rem;
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

#cover-icon {
  height: 2rem;
}

#project-icon {
  height: 1.25rem;
}

#padding-div {
  padding-bottom: 2rem;
}

h3, h6, h5, h4 {
  margin-bottom: -1rem;
}

button {
  background-color: #FFF;
  border: 1.5px solid #57a6cc;
  color: #57a6cc;
  border-radius: 5px;
  padding: 5px;
  margin-right: .5rem;
  margin-bottom: .5rem;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
  monospace;
}

#col-padding {
  margin-right: 2rem;
}

#section {
  position: relative;
  min-height: 100vh;
}

#vertical-center {
  margin: 0;
  position: absolute;
  top: 50%;
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

#horizontal {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

#footer {
  background-color: #bae8ff;
  padding-left: 5rem;
  position: absolute;
  left:0;
  right:0;
  padding-bottom: 2rem;
}

.App {
  background-color: #FFF;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  color: #000;
}

